--- a/app/views/tarefas/index.html.erb
+++ b/app/views/tarefas/index.html.erb
@@ -1,30 +1,38 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+  <div class="alert alert-success alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <%= notice %>
+  </div>
+<% end %>
 
-<h1>Listing Tarefas</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Nome</th>
-      <th>completo</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tarefas.each do |tarefa| %>
-      <tr>
-        <td><%= tarefa.nome %></td>
-        <td><%= tarefa.completo %></td>
-        <td><%= link_to 'Show', tarefa %></td>
-        <td><%= link_to 'Completar tarefa', completar_tarefa_path(tarefa) %></td>
-        <td><%= link_to 'Edit', edit_tarefa_path(tarefa) %></td>
-        <td><%= link_to 'Destroy', tarefa, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div id="tarefas">
+  <h1>
+    Tarefas
+    <%= link_to(new_tarefa_path, title: 'Adicionar tarefa') do %>
+      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Tarefa', new_tarefa_path %>
+  </h1>
+  <% @tarefas.each do |tarefa| %>
+    <div class="tarefa">
+      <% if tarefa.completo %>
+        <%= link_to(completar_tarefa_path(tarefa), title: 'Desfazer tarefa', class: 'desfazer-tarefa') do %>
+          <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        <% end %>
+      <% else %>
+        <%= link_to(completar_tarefa_path(tarefa), title: 'Finalizar tarefa', class: 'finalizar-tarefa') do %>
+          <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+        <% end %>
+      <% end %>
+      <span><%= tarefa.nome %></span>
+      <%= link_to(tarefa, title: "Mostrar tarefa") do %>
+        <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+      <% end %>
+      <%= link_to(edit_tarefa_path(tarefa), title: 'Editar tarefa') do %>
+        <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+      <% end %>
+      <%= link_to(tarefa, method: :delete, data: { confirm: 'Are you sure?' }, title: 'Excluir tarefa') do %>
+        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+      <% end %>
+    </div>
+  <% end %>
+</div>
