--- a/app/views/tarefas/_form.html.erb
+++ b/app/views/tarefas/_form.html.erb
@@ -11,15 +11,16 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :nome %><br>
-    <%= f.text_field :nome %>
+    <%= f.text_field :nome, class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= f.label :completo %><br>
-    <%= f.check_box :completo %>
+  <div class="checkbox">
+    <label>
+      <%= f.check_box :completo %> Finalizada
+    </label>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Salvar', :class => 'btn btn-default' %>
   </div>
 <% end %>
