--- a/app/views/tarefas/edit.html.erb
+++ b/app/views/tarefas/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Tarefa</h1>
+<div id="tarefas">
+  <h1>Editando Tarefa</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @tarefa %> |
-<%= link_to 'Back', tarefas_path %>
+  <%= link_to 'Mostrar', @tarefa %> |
+  <%= link_to 'Voltar', root_path %>
+</div>
