--- a/app/views/tarefas/new.html.erb
+++ b/app/views/tarefas/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Tarefa</h1>
+<div id="tarefas">
+  <h1>Nova Tarefa</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', tarefas_path %>
+  <%= link_to 'Voltar', root_path %>
+</div>
